# Vector

./: CMakeLists.txt
src/: vector.h
tests/: sources.cmake  test_vector.cpp
