cmake_minimum_required(VERSION 3.14)
project(vector)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include(FetchContent)
FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
)

FetchContent_MakeAvailable(googletest)

include(tests/sources.cmake)

enable_testing()

target_link_libraries(
  test_vector
  GTest::gtest_main
)

include(GoogleTest)
gtest_discover_tests(test_vector)